# neural-mandelbrot

./: CMakeLists.txt  README.md
include/: image_encode.h  mandelbrot.h  neural_network_stuff.h
src/: image_encode.c  main.c  mandelbrot.c  neural_network_stuff.c
